<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.ActivityImpl.ViewOrderActivity">
    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/silver"
        android:layout_weight="2.5">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/product_invoice"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="35dp"
            android:textStyle="italic|normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#9C27B0"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:orientation="horizontal">
        </LinearLayout>

        <TextView
            android:id="@+id/tvDateMakeOrderView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_date"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/tvOrderPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/red"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="5dp"
            android:text="@string/money_text" />
        <TextView
            android:id="@+id/tvOrderAddressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="5dp"
            android:text="@string/address" />
        <TextView
            android:id="@+id/tvOrderStatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="80dp"
            android:text="@string/status" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="6">
        <LinearLayout
            android:id="@+id/layout_container_order_detail"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelOrderView"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_box_rounded_red"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnDeleteOrder"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_box_rounded_red"
            android:text="@string/delete_order"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="italic" />

    </LinearLayout>
</LinearLayout>