<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="10sp"
        android:background="@drawable/bg_while_rounded"
        android:orientation="horizontal"
        android:elevation="5sp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageFood"
            android:contentDescription="@string/content_description_image"
            android:padding="8sp"
            android:scaleType="fitXY"
            android:layout_width="161dp"
            android:layout_height="match_parent"
            android:src="@drawable/slider_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/delivery_icon"
                    android:layout_marginEnd="15dp" />

                <TextView
                    android:id="@+id/tvNameFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/meat_banh_mi"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSizeFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/example_size"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/money_icon"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="30dp" />

                <TextView
                    android:id="@+id/tvPriceFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/money_text"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvFoodRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>