<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_while_rounded"
        android:orientation="horizontal"
        android:weightSum="10"
        android:elevation="10sp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageSavedFood"
            android:layout_width="36dp"
            android:layout_height="77sp"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:contentDescription="@string/content_description_image"
            android:scaleType="fitXY"
            android:src="@drawable/slider_1" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="5sp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6">
            <TextView
                android:id="@+id/tvFoodNameSaved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/egg_banh_mi"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="3dp"
                android:background="@color/purple_700" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/tvFoodSavedSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_size"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5sp" />
                <TextView
                    android:id="@+id/tvFoodSavedPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/money_text"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvFoodSavedRestaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#3F51B5"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/btnDeleteSaveCardItem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/delete"
                android:layout_marginStart="10dp"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>