<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginStart="10sp"
        android:layout_margin="15sp"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_while_rounded"
        android:orientation="horizontal"
        android:weightSum="10"
        android:elevation="3sp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageCartFood"
            android:layout_width="65dp"
            android:layout_height="99dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:contentDescription="@string/content_description_image"
            android:scaleType="fitXY"
            android:src="@drawable/slider_1" />
        <LinearLayout
            android:layout_marginStart="5dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6">
            <TextView
                android:id="@+id/tvFoodNameCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/egg_banh_mi"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvFoodSizeCart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10sp"
                    android:text="@string/example_size"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tvFoodPriceCart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/money_text"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvRestaurantNameCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/btnSubQuantity_Cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/minus"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/tvFoodQuantity_Cart"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/default_quantity"/>

                <ImageView
                    android:id="@+id/btnAddQuantity_Cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_delete"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:gravity="center">

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#3F51B5"
                android:orientation="vertical">
            </LinearLayout>

            <ImageView
                android:id="@+id/btnDeleteCartItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>