<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityImpl.CategoryActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageCartC"
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:src="@drawable/back"
            android:layout_marginStart="0sp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="45dp"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Danh Mục" />

        <ImageView
            android:id="@+id/imageSync"
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/sync"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="45sp"/>

    </LinearLayout>

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="360sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/bg_search_view"
        android:elevation="5dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layout_storeInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageStore_category"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/content_description_image"
                    android:src="@drawable/quan_banh_mi_co_ba" />

                <TextView
                    android:id="@+id/tvStoreName_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/blue"
                    android:text="@string/quan_pho_gia_truyen" />
                <TextView
                    android:id="@+id/tvStoreAddress_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/green"
                    android:textStyle="italic"
                    android:text="@string/example_address" />
                <TextView
                    android:id="@+id/tvStorePhone_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/red"
                    android:text="@string/hint_phone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cosmeticCartContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>